test/semant/negative_controls/buggy_progs/non-bool-principle.con
concept test
purpose "something"
state
actions
  a()
principle
  1 + 1